[package]
name = "miniboxd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.cargo-machete]
ignored = ["tracing-subscriber"]

[lib]
name = "miniboxd"
path = "src/lib.rs"

[[bin]]
name = "miniboxd"
path = "src/main.rs"

[features]
default = ["metrics", "otel"]
metrics = ["minibox/metrics"]
otel    = ["minibox/otel"]
# tailnet feature is declared for cfg(feature = "tailnet") gating in main.rs;
# the tailbox crate was moved to minibox-plugins — enable separately when available.
tailnet = []
vz = ["macbox/vz"]

[dependencies]
# minibox is Unix-only at the source level (uses nix crate), but Cargo requires
# feature forwarding (metrics/otel) to reference a dep in [dependencies], not
# a target-conditional section. The minibox crate itself cfg-gates all
# Linux-specific code, so it compiles on macOS as well.
minibox = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
minibox-core = { workspace = true }
macbox = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winbox = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
serde_json = "1"
serial_test = { workspace = true }
async-trait = { workspace = true }
minibox-core = { workspace = true, features = ["test-utils"] }
minibox = { workspace = true, features = ["test-utils"] }
proptest = "1"
