[package]
name = "searchbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
zoektbox        = { path = "../zoektbox" }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true }
async-trait     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
reqwest         = { workspace = true }
futures         = { workspace = true }
clap            = { workspace = true }
chrono          = { workspace = true }
dirs            = { workspace = true }
tracing-subscriber = { workspace = true }
toml            = "0.8"
glob            = "0.3"
shellexpand     = "3"

[[bin]]
name = "searchboxd"
path = "bin/searchboxd.rs"

[features]
integration-tests = []

[dev-dependencies]
tokio    = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
toml     = "0.8"
