[package]
name = "tailbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tailscale-rs network adapter for minibox containers"

[dependencies]
minibox-core = { path = "../minibox-core" }
minibox-secrets = { path = "../minibox-secrets" }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tailscale = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
