[package]
name = "winbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
daemonbox = { workspace = true }
linuxbox = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[package.metadata.cargo-machete]
# winbox is a Windows stub — deps reserved for planned implementation
ignored = ["daemonbox", "linuxbox", "tokio", "tracing-subscriber"]
