[package]
name = "winbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
minibox = { workspace = true }
minibox-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[package.metadata.cargo-machete]
# winbox is a Windows stub — deps reserved for planned implementation
ignored = ["minibox", "minibox-core", "tokio", "tracing-subscriber"]
