[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs = "5"
libc = "0.2"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
xshell = "0.2"

[dev-dependencies]
tempfile = "3"
